@@ -3,6 +3,9 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21090).
   * In rare cases, caption would not word-wrap properly (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21106).
+  * Don't set alpha pixels in SetImageVirtualPixelMethod() unless
+    image area is well defined (i.e. != 0) (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?t=21110).
 
 2012-05-27  6.7.7-3 Anthony Thyssen <A.Thyssen@griffith...>
   * Trialing the addition of new interpolation methods
